@@ -195,6 +195,12 @@ static void msg_to_bb(SMSCConn *conn, Octstr *line)
         if (octstr_url_decode(msg->sms.msgdata) == -1)
             warning(0, "smsc_fake: url-encoded data from client looks malformed");
     }
+    else if (!octstr_compare(type, octstr_imm("utf8"))) {
+        msg->sms.msgdata = octstr_copy(line, p + 1, LONG_MAX);
+        msg->sms.coding = DC_7BIT;
+        if (octstr_url_decode(msg->sms.msgdata) == -1)
+            warning(0, "smsc_fake: url-encoded data from client looks malformed");
+    }
     else if (!octstr_compare(type, octstr_imm("route"))) {
         p2 = octstr_search_char(line, ' ', p + 1);
         if (p2 == -1)
