@@ -1,3 +1,7 @@
+2020-06-03  Stipe Tolj  <stolj at kannel.org>
+    * gw/smsc/smsc_fake.c, test/fakesmsc.c: add type 'utf8' to allow simple
+      injection of UTF-8 encoded MOs.
+      
 2020-05-04 Alexander Malysh <amalysh @ kannel.org>
     * gwlib/http.[ch]: added http PATCH method support
 
